Ajustando API
